--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,26 @@
 {
-    "builds": [{
-        "src": "register/wsgi.py",
-        "use": "@vercel/python"
-    }],
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "register/wsgi.py"
-    }]
+    "version": 2,
+    "builds": [
+        {
+            "src": "register/wsgi.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "register/wsgi.py"
+        }
+    ]
 }
